s01/e08/dist/3_traefik-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-bugs-tls
  namespace: tgir-s01e08
spec:
  entryPoints:
    - management-tls
  routes:
  - match: Host(`tgir-s01e08-bugs.rabbitmq.com`)
    kind: Rule
    services:
      - name: rabbitmq-bugs
        namespace: tgir-s01e08
#        scheme: https
        port: 15672
# here we redirect the traffic to the standard port
# to enable the management-tls port you need the website certificates
#  and store them in tls-rabbit-management.cluster
#  tls:
#    - secretName: tls-rabbit-management.cluster
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-bunny-tls
  namespace: tgir-s01e08
spec:
  entryPoints:
    - management-tls
  routes:
    - match: Host(`tgir-s01e08-bunny.rabbitmq.com`)
      kind: Rule
      services:
        - name: rabbitmq-bunny
          namespace: tgir-s01e08
          # scheme: https
          port: 15672
# here we redirect the traffic to the standard port
# to enable the management-tls port you need the website certificates
#  and store them in tls-rabbit-management.cluster
#  tls:
#    - secretName: tls-rabbit-management.cluster
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: rabbitmq-bugs-ingress
  namespace: tgir-s01e08
spec:
  entryPoints:
    - amqps
  routes:
    - match: HostSNI(`tgir-s01e08-bugs.rabbitmq.com`)
      services:
        - name: rabbitmq-bugs
          namespace: tgir-s01e08
          port: 5671
  tls:
    passthrough: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: rabbitmq-bunny-ingress
  namespace: tgir-s01e08
spec:
  entryPoints:
    - amqps
  routes:
    - match: HostSNI(`tgir-s01e08-bunny.rabbitmq.com`)
      services:
        - name: rabbitmq-bunny
          namespace: tgir-s01e08
          port: 5671
  tls:
    passthrough: true
